--- a/odss.common/setup.cfg
+++ b/odss.common/setup.cfg
@@ -11,6 +11,15 @@ include_package_data = True
 python_version = 3.10
 namespace_packages = True
 
-[tool.mypy]
-python_version = 3.10
-namespace_packages = True
+[flake8]
+max-line-length = 100
+per-file-ignores =
+    # __init__ exports names
+    odss/common/__init__.py: F401
+
+[isort]
+line_length=100
+include_trailing_comma=True
+multi_line_output=3
+force_grid_wrap=0
+combine_as_imports=True
