--- a/odss.cdi/tox.ini
+++ b/odss.cdi/tox.ini
@@ -1,6 +1,9 @@
 [tox]
 envlist =
     py3{11,10}
+    # typing
+    black
+    flake8
 skip_missing_interpreters = true
 
 [testenv]
@@ -9,3 +12,21 @@ deps =
     -r requirements/tests.txt
 
 commands = pytest -v --tb=short --basetemp={envtmpdir} {posargs:tests}
+
+[testenv:typing]
+deps = -r requirements/typing.txt
+commands = mypy odss
+
+[testenv:black]
+basepython = python3
+usedevelop = false
+deps = black
+changedir = {toxinidir}
+commands = black --check --diff .
+
+[testenv:flake8]
+basepython = python3
+usedevelop = false
+deps = flake8 >= 3.7.0
+changedir = {toxinidir}
+commands = flake8 .
