--- a/odss.common/tox.ini
+++ b/odss.common/tox.ini
@@ -1,8 +1,24 @@
 [tox]
 envlist =
     typing
+    black
+    flake8
 skip_missing_interpreters = true
 
 [testenv:typing]
 deps = -r requirements/typing.txt
 commands = mypy odss
+
+[testenv:black]
+basepython = python3
+usedevelop = false
+deps = black
+changedir = {toxinidir}
+commands = black --check --diff .
+
+[testenv:flake8]
+basepython = python3
+usedevelop = false
+deps = flake8 >= 3.7.0
+changedir = {toxinidir}
+commands = flake8 .
