--- a/odss.core/tox.ini
+++ b/odss.core/tox.ini
@@ -2,6 +2,8 @@
 envlist =
     py3{11,10}
     typing
+    black
+    flake8
 skip_missing_interpreters = true
 
 [testenv]
@@ -13,4 +15,18 @@ commands = pytest -v --tb=short --basetemp={envtmpdir} {posargs:tests}
 
 [testenv:typing]
 deps = -r requirements/typing.txt
-commands = mypy odss/core/
+commands = mypy odss
+
+[testenv:black]
+basepython = python3
+usedevelop = false
+deps = black
+changedir = {toxinidir}
+commands = black --check --diff .
+
+[testenv:flake8]
+basepython = python3
+usedevelop = false
+deps = flake8 >= 3.7.0
+changedir = {toxinidir}
+commands = flake8 .
