--- a/odss.common/tox.ini
+++ b/odss.common/tox.ini
@@ -1,24 +1,24 @@
 [tox]
-envlist =
+minversion = 3.10.0
+envlist = 
+    formating
     typing
-    black
-    flake8
-skip_missing_interpreters = true
+    linting
+
+[testenv:formating]
+deps = -r requirements/formating.txt
+changedir = {toxinidir}
+commands = 
+    black --check --diff .
 
 [testenv:typing]
 deps = -r requirements/typing.txt
-commands = mypy odss
-
-[testenv:black]
-basepython = python3
-usedevelop = false
-deps = black
 changedir = {toxinidir}
-commands = black --check --diff .
+commands = 
+    mypy odss
 
-[testenv:flake8]
-basepython = python3
-usedevelop = false
-deps = flake8 >= 3.7.0
+[testenv:linting]
+deps = -r requirements/linting.txt
 changedir = {toxinidir}
-commands = flake8 .
+commands = 
+    flake8 .
