--- a/odss.core/tox.ini
+++ b/odss.core/tox.ini
@@ -1,32 +1,31 @@
 [tox]
-envlist =
-    py3{11,10}
+minversion = 3.10.0
+envlist = 
+    tests
+    formating
     typing
-    black
-    flake8
-skip_missing_interpreters = true
+    linting
 
 [testenv]
-envtmpdir = {toxworkdir}/tmp/{envname}
-deps =
-    -r requirements/tests.txt
+deps = -r requirements/tests.txt
+changedir = {toxinidir}
+commands = 
+    pytest -v --tb=short --basetemp={envtmpdir} {posargs:tests}
 
-commands = pytest -v --tb=short --basetemp={envtmpdir} {posargs:tests}
+[testenv:formating]
+deps = -r requirements/formating.txt
+changedir = {toxinidir}
+commands = 
+    black --check --diff .
 
 [testenv:typing]
 deps = -r requirements/typing.txt
-commands = mypy odss
-
-[testenv:black]
-basepython = python3
-usedevelop = false
-deps = black
 changedir = {toxinidir}
-commands = black --check --diff .
+commands = 
+    mypy odss
 
-[testenv:flake8]
-basepython = python3
-usedevelop = false
-deps = flake8 >= 3.7.0
+[testenv:linting]
+deps = -r requirements/linting.txt
 changedir = {toxinidir}
-commands = flake8 .
+commands = 
+    flake8 .
