--- a/odss.services.shell/tox.ini
+++ b/odss.services.shell/tox.ini
@@ -1,11 +1,17 @@
 [tox]
-envlist =
-    py3{11,10}
-skip_missing_interpreters = true
+minversion = 3.10.0
+envlist = 
+    tests
+    formating
 
 [testenv]
-envtmpdir = {toxworkdir}/tmp/{envname}
-deps =
-    -r requirements/ci.txt
+deps = -r requirements/tests.txt
+changedir = {toxinidir}
+commands = 
+    pytest -v --tb=short --basetemp={envtmpdir} {posargs:tests}
 
-commands = pytest -v --tb=short --basetemp={envtmpdir} {posargs:tests}
+[testenv:formating]
+deps = -r requirements/formating.txt
+changedir = {toxinidir}
+commands = 
+    black --check --diff .
