Update tox configs

--- a/odss.common/setup.cfg
+++ b/odss.common/setup.cfg
@@ -15,7 +15,7 @@ namespace_packages = True
 max-line-length = 100
 per-file-ignores =
     # __init__ exports names
-    odss/common/__init__.py: F401
+    ./odss/common/__init__.py: F401
 
 [isort]
 line_length=100
